# Arena_Allocator

./: CMakeLists.txt  build.sh
include/: Arena.h  arena.h
src/: Arena.c  arena.c  main.c
tests/: arena_test.c
